# OO2026_viikkotehtavat

./: README.md
viikko 2/OO_viikteh2/: CMakeLists.txt  game.cpp  game.h  main.cpp
viikko 3/OO_viikkotehtava3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
viikko 4/OO_viikkotehtava4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
viikko 5/OO_viikkotehtava5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
viikko 6/OO_viikkoteht6/: CMakeLists.txt  main.cpp  student.cpp  student.h
viikko1/olioOhjelmointi_tunti_1_nopeaHarjoitus/: CMakeLists.txt  main.cpp
viikko1/viikkotehtava_1/: CMakeLists.txt  main.cpp
